# cu-lect8-ahe

./: .gitignore  bank.py  eda.ipynb  graph_gen.py  hello.py  payment_service.py  pyproject.toml  scores_gen.py  utils.py
data/: scores.csv  transactions.csv
homework/: TASK.md  config.py  mul.py  p1.csv  p2.csv
