[project]
name = "lect8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.13.0",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "phe>=1.5.0",
    "scipy>=1.16.2",
]
